fix serializing object from string